<?xml version="1.0"?>
<package>
  <name>oculus_sdk</name>
  <version>0.4.3</version>
  <description>The Oculus Rift SDK</description>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>Oculus Rift SDK</license>
  <url type="website">https://developer.oculusvr.com</url>
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>glut</build_depend>
  <build_depend>libudev-dev</build_depend>
  <build_depend>libxext</build_depend>
  <build_depend>libxinerama-dev</build_depend>
  <build_depend>mesa-common-dev</build_depend>
  <run_depend>libudev-dev</run_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>